--- a/TODO
+++ b/TODO
@@ -1,25 +1,20 @@
+- search in channel doesn't work / remember user parameter, when searching in user.
+- empty "search in" anchor tag.
 - in channel searching the last item is not displayed? because the pager is not
   there.
-
 - search in channel "empty" string with sort by date doesn't show all newest
   (compared to Atom feed).
 - search in channel pagination does not work.
-
 - gph/cli: encode search parameter (spaces).
 - gph: escape text like "|", TAB and other control-characters.
-
 - youtube_search: make page an int.
 - youtube_search: make order some enum type.
-
 - decodeparam, getparam etc: cast ctype functions to (unsigned char).
-
-? some way to show duration for playlists?
-? show published date in a consistent way? ("non-human friendly": YYYY-mm-dd HH:MM:SS TZ)
-
 - cleanup code parsing and views for frontend.
 - frontends:
   - CGI HTTP
   - CGI gopher
   - dmenu / console (TSV output?) (no HTTP client, just parsing).
-
 - test/tweak Accept-Language header.
+? some way to show duration for playlists?
+? show published date in a consistent way? ("non-human friendly": YYYY-mm-dd HH:MM:SS TZ)
