--- a/TODO
+++ b/TODO
@@ -5,7 +5,7 @@
 - search in channel "empty" string with sort by date doesn't show all newest
   (compared to Atom feed).
 - search in channel pagination does not work.
-- gph: escape text like "|", TAB and other control-characters.
+x gph: escape text like "|", TAB and other control-characters.
 - youtube_search: make page an int.
 - youtube_search: make order some enum type.
 - cleanup code parsing and views for frontend.
