--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+- write a proper Makefile.
 - improve/remove playlist links, it currently shows the first link.
 x improve playlist parsing, "view full playlist" as published column.
 - search in channel doesn't work / remember user parameter, when searching in user.
@@ -15,6 +16,6 @@ x gph: escape text like "|", TAB and other control-characters.
   - CGI HTTP
   - CGI gopher
   - dmenu / console (TSV output?) (no HTTP client, just parsing).
-- test/tweak Accept-Language header.
+x test/tweak Accept-Language header.
 ? some way to show duration for playlists?
 ? show published date in a consistent way? ("non-human friendly": YYYY-mm-dd HH:MM:SS TZ)
