--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
+- refactor struct video from global scope to struct search_response * or so.
+- gph: support pagination.
 - write a proper Makefile.
 - improve/remove playlist links, it currently shows the first link.
-x improve playlist parsing, "view full playlist" as published column.
 - search in channel doesn't work / remember user parameter, when searching in user.
 - empty "search in" anchor tag.
 - in channel searching the last item is not displayed? because the pager is not
@@ -8,14 +9,6 @@ x improve playlist parsing, "view full playlist" as published column.
 - search in channel "empty" string with sort by date doesn't show all newest
   (compared to Atom feed).
 - search in channel pagination does not work.
-x gph: escape text like "|", TAB and other control-characters.
 - youtube_search: make page an int.
 - youtube_search: make order some enum type.
 - cleanup code parsing and views for frontend.
-- frontends:
-  - CGI HTTP
-  - CGI gopher
-  - dmenu / console (TSV output?) (no HTTP client, just parsing).
-x test/tweak Accept-Language header.
-? some way to show duration for playlists?
-? show published date in a consistent way? ("non-human friendly": YYYY-mm-dd HH:MM:SS TZ)
